Fixes layout problems in Chrome.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -292,6 +292,7 @@ div#pagenumbers div.right {
 }
 
 #content #threads .localnums {
+  display: inline;
   float: right;
   border-top: 1px solid #9d9d9d;
   border-bottom: 1px solid #9d9d9d;
